<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fl_location_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="24dp">

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_location_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:ellipsize="end"
            android:maxEms="15"
            android:maxLines="1"
            tools:text="Alexandria, Egypt" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_azan_method_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/fl_location_btn">

        <TextView
            android:id="@+id/tv_azan_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/azan_method"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_azan_method_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:ellipsize="end"
            android:maxEms="15"
            android:maxLines="1"
            tools:text="Muslim World Authority" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_switch_time_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/fl_azan_method_btn">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_format"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_format_description" />

        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sc_time_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:switchPadding="5dp"
            tools:text="24H" />

    </FrameLayout>

    <TextView
        android:id="@+id/tv_made_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/made_by_omar_rostom"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_switch_time_format" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_made_by" />

</android.support.constraint.ConstraintLayout>