<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_fajr_manual_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="24dp"
            app:layout_constraintTop_toBottomOf="@id/ll_manual_adjustments_title">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/fajr_manual_difference"
                android:textStyle="bold" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/np_fajr_prayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="-36dp"
                android:clipChildren="true"
                android:clipToPadding="true"
                app:np_dividerColor="@color/colorPrimary"
                app:np_height="40dp"
                app:np_max="60"
                app:np_min="-60"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="@color/colorPrimaryDark"
                app:np_textColor="@color/colorPrimary" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_zuhr_manual_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="24dp"
            app:layout_constraintTop_toBottomOf="@id/fl_fajr_manual_change">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/zuhr_manual_difference"
                android:textStyle="bold" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/np_zuhr_prayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="-36dp"
                android:clipChildren="true"
                android:clipToPadding="true"
                app:np_dividerColor="@color/colorPrimary"
                app:np_height="40dp"
                app:np_max="60"
                app:np_min="-60"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="@color/colorPrimaryDark"
                app:np_textColor="@color/colorPrimary" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_asr_manual_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="24dp"
            app:layout_constraintTop_toBottomOf="@id/fl_zuhr_manual_change">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/asr_manual_difference"
                android:textStyle="bold" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/np_asr_prayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="-36dp"
                android:clipChildren="true"
                android:clipToPadding="true"
                app:np_dividerColor="@color/colorPrimary"
                app:np_height="40dp"
                app:np_max="60"
                app:np_min="-60"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="@color/colorPrimaryDark"
                app:np_textColor="@color/colorPrimary" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_maghreb_manual_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="24dp"
            app:layout_constraintTop_toBottomOf="@id/fl_asr_manual_change">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/maghreb_manual_difference"
                android:textStyle="bold" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/np_maghreb_prayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="-36dp"
                android:clipChildren="true"
                android:clipToPadding="true"
                app:np_dividerColor="@color/colorPrimary"
                app:np_height="40dp"
                app:np_max="60"
                app:np_min="-60"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="@color/colorPrimaryDark"
                app:np_textColor="@color/colorPrimary" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_isha_manual_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="24dp"
            app:layout_constraintTop_toBottomOf="@id/fl_maghreb_manual_change">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/isha_manual_difference"
                android:textStyle="bold" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/np_isha_prayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="-36dp"
                android:clipChildren="true"
                android:clipToPadding="true"
                app:np_dividerColor="@color/colorPrimary"
                app:np_height="40dp"
                app:np_max="60"
                app:np_min="-60"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="@color/colorPrimaryDark"
                app:np_textColor="@color/colorPrimary" />

        </FrameLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>